Round statistics number and extended pagination information on backend
